fix the gap in menu

--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ a:hover {
 
 .menu {
   border-top: 1px solid #e7e7e7;
-  margin-top: 5em;
+  margin-top: 1.5em;
   padding-top: 1.5em;
   padding-bottom: 0.0em;
 }
